# common_stuff

./: .coverage  .gitignore  .gitignore.swp  .pre-commit-config.yaml  ACT_ILs_funcitons.py  README.md  abinit_functions.py  common_stuff.py  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
JUPYTER/: MP-retrieve.ipynb  Plot_EBS.ipynb
JUPYTER/.ipynb_checkpoints/: MP-retrieve-checkpoint.ipynb  Plot_EBS-checkpoint.ipynb
MOFS_QML/: GAMESS.py
old/: ACT_ILs_funcitons.py  MOFS_QML.py  abinit_functions.py  common_functions.py  loglog.ipynb  loglog.py  potentials.py
old/MOFS_QML/: AVOGADRO.py  Functions.py  known_smiles.py
old/common_stuff.egg-info/: PKG-INFO  top_level.txt
src/: MOFS_QML.py  MOFS_RGI2972_functions.py  class_MOF.py  common_functions.py  common_stuff.py
src/mylib/: functions.py  potentials.py
src/old/: MOFS_RGI2972_functions.py  main.py  plot3d.ipynb
src/old/common_stuff.egg-info/: SOURCES.txt
tests/: test_functions.py  test_potentials.py
