[tool.poetry]
name = "mylib"
version = "0.1.0"
description = ""
authors = ["marcodigennaro <m.di.gennaro@outlook.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core", "numpy", "pandas", "matplotlib"]
build-backend = "poetry.core.masonry.api"
