[metadata]
name = mylib

[options]
packages =
    mylib
install_requires =
    numpy
    matplotlib
    pandas
package_dir =
    =src

[options.extra_require]
testing =
    flake8>=6.0
    tox>=4.4
    pytest>=7.3
    pytest>=4.0
    mypy>=1.2

[options.package_data]
mylib = py.typed

[flake8]
max-line-length = 160

